# django-pwny

./: .cz.toml  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: cz-bump.yml  pre-commit.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
pwny/: __init__.py  validation.py
requirements/: base.txt  local.txt  test.txt
tests/: settings.py  test_validation.py  urls.py
