[tool.poetry]
name = "django-pwny"
version = "0.2.12"
description = "Have I Been Pwned? password validator"
authors = ["PsypherPunk <psypherpunk@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.28.0"
pre-commit = "^3.7.1"
pytest = "^8.3.1"

[tool.commitizen]
version = "0.2.12"
bump_message = "bump: version $current_version → $new_version [skip ci]"
version_files = [
    "pwny/__init__.py:^__version__",
    "pyproject.toml:^version",
]

[tool.commitizen.customize]
bump_pattern = '^(BREAKING CHANGE|build|chore|docs|feat|fix|refactor|test)(\(.+\))?(!)?'
bump_map = {"!" = "MAJOR", build = "PATCH", chore = "PATCH", docs = "PATCH", feat = "MINOR", fix = "PATCH", refactor = "PATCH", test = "PATCH" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
